--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 </div>
             </div>
 
-            <a href=https://drive.google.com/file/d/1vkdKOkw-KQ5_EBIZbpfUkZho7P4tDyiu/view?usp=drivesdk class="btn">See More</a>
-            <a href="https://drive.google.com/file/d/1vkdKOkw-KQ5_EBIZbpfUkZho7P4tDyiu/view?usp=drivesdk" download class="btn btn2">Download CV</a>
+            <a href="https://drive.google.com/file/d/1zcsc8CXtHWyRZBxxUm91COf8sqBvKW1A/view?usp=drivesdk" class="btn">See More</a>
+            <a href="https://drive.google.com/file/d/1zcsc8CXtHWyRZBxxUm91COf8sqBvKW1A/view?usp=drivesdk" download class="btn btn2">Download CV</a>
             
         </div>
     </div>
